# market-watch-api

./: .env  PROJECT_SCOPE.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: health.py
app/core/: config.py  database.py
app/domain/models/: __init__.py  alert.py  asset.py  base.py  enums.py  ingestion_run.py  market_data.py  user.py  watchlist.py
market_watch_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
migrations/versions/: 0001_step3_bootstrap.py  0002_step4_create_v1_schema.py
tests/api/: test_health.py
